# SG-FR-agri-restoration

./: .gitignore  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements-paper.txt
scripts/: build_revision_docx.py  cea_blind_generalization.py  cea_boundary_analysis.py  cea_cofly_boost.py  cea_date_disjoint_sanity.py  cea_efficiency.py  cea_engineering_baselines.py  cea_exp.py  cea_figures.py  cea_figures_samples.py  cea_guide_quality_curve.py  cea_interpret.py  cea_near_duplicate_sanity.py  cea_no_reference.py  cea_quality_gain.py  cea_quality_gain_analysis.py  cea_realistic_degradation.py  cea_report.py  cea_revision_stats.py  cea_sat_figures.py  cea_second_dataset.py  cea_segmenter_budget_ablation.py  cea_semantic_source.py  cea_sr_baselines.py  cea_strong_baselines.py  cea_table2_matrix.py  cea_veil_mechanism.py  cea_veil_replot.py  route_a_verify.py  run_all_phases.sh
src/cea_plus/: __init__.py  boundary_sensitivity.py  cross_dataset.py  dataset.py  deep_baselines.py  deep_downstream.py  degradation.py  downstream.py  downstream_eval.py  metrics.py  no_leak_experiment.py  paper_tables.py  (+18 more)
tests/: test_boundary_sensitivity.py  test_cross_dataset_report.py  test_deep_baselines.py  test_deep_downstream.py  test_downstream.py  test_metrics.py  test_no_leak_protocol.py  test_paper_tables.py  test_pipeline.py  test_real_experiment_infra.py  test_semantic_guided_analysis.py  test_semantic_guided_restoration.py  test_semantic_guided_visualization.py  test_semantic_inr.py  test_semantic_inr_downstream.py  test_split_integrity.py  test_stage2_readiness.py
